syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/datmaithanh/orderfood/pb";

message UpdatePasswordUserRequest {
    int64 id = 1;
    string password = 3;
}

message UpdatePasswordUserResponse {
    User user = 1;
}